updated reference list

--- a/journalMS/refs.bib
+++ b/journalMS/refs.bib
@@ -1,3 +1,115 @@
+@article{Hahne2018,
+abstract = {Myoelectric hand prostheses are usually controlled with two bipolar electrodes located on the flexor and extensor muscles of the residual limb. With clinically established techniques, only one function can be controlled at a time. This is cumbersome and limits the benefit of additional functions offered by modern prostheses. Extensive research has been conducted on more advanced control techniques, but the clinical impact has been limited, mainly due to the lack of reliability in real-world conditions. We implemented a regression-based control approach that allows for simultaneous and proportional control of two degrees of freedom and evaluated it on five prosthetic end users. In the evaluation of tasks mimicking daily life activities, we included factors that limit reliability, such as tests in different arm positions and on different days. The regression approach was robust over multiple days and only slightly affected by changing in the arm position. Additionally, the regression approach outperformed two clinical control approaches in most conditions.},
+author = {Hahne, Janne M. and Schweisfurth, Meike A. and Koppe, Mario and Farina, Dario},
+doi = {10.1126/scirobotics.aat3630},
+issn = {24709476},
+journal = {Science Robotics},
+month = {jun},
+number = {19},
+pmid = {33141685},
+publisher = {American Association for the Advancement of Science},
+title = {{Simultaneous control of multiple functions of bionic hand prostheses: Performance and robustness in end users}},
+url = {http://robotics.sciencemag.org/},
+volume = {3},
+year = {2018}
+}
+
+@article{Wong2020,
+abstract = {Superspreaders, infected individuals who result in an outsized number of secondary cases, are believed to underlie a significant fraction of total SARS-CoV-2 transmission. Here, we combine empirical observations of SARS-CoV and SARS-CoV-2 transmission and extreme value statistics to show that the distribution of secondary cases is consistent with being fat-tailed, implying that large superspreading events are extremal, yet probable, occurrences. We integrate these results with interaction-based network models of disease transmission and show that superspreading, when it is fat-tailed, leads to pronounced transmission by increasing dispersion. Our findings indicate that large superspreading events should be the targets of interventions that minimize tail exposure.},
+author = {Wong, Felix and Collins, James J.},
+doi = {10.1073/pnas.2018490117},
+file = {:Users/elanness-cohn/Library/Application Support/Mendeley Desktop/Downloaded/Wong, Collins - 2020 - Evidence that coronavirus superspreading is fat-tailed.pdf:pdf},
+issn = {10916490},
+journal = {Proceedings of the National Academy of Sciences of the United States of America},
+keywords = {COVID-19,Extreme value theory,Infectious disease,SARS-CoV-2,Superspreading},
+month = {nov},
+number = {47},
+pages = {29416--29418},
+pmid = {33139561},
+publisher = {National Academy of Sciences},
+title = {{Evidence that coronavirus superspreading is fat-tailed}},
+url = {www.pnas.org/cgi/doi/10.1073/pnas.2018490117},
+volume = {117},
+year = {2020}
+}
+
+@article{Kaczanowska2021,
+abstract = {Metastasis is the leading cause of cancer-related deaths, and greater knowledge of the metastatic microenvironment is necessary to effectively target this process. Microenvironmental changes occur at distant sites prior to clinically detectable metastatic disease; however, the key niche regulatory signals during metastatic progression remain poorly characterized. Here, we identify a core immune suppression gene signature in pre-metastatic niche formation that is expressed predominantly by myeloid cells. We target this immune suppression program by utilizing genetically engineered myeloid cells (GEMys) to deliver IL-12 to modulate the metastatic microenvironment. Our data demonstrate that IL12-GEMy treatment reverses immune suppression in the pre-metastatic niche by activating antigen presentation and T cell activation, resulting in reduced metastatic and primary tumor burden and improved survival of tumor-bearing mice. We demonstrate that IL12-GEMys can functionally modulate the core program of immune suppression in the pre-metastatic niche to successfully rebalance the dysregulated metastatic microenvironment in cancer.},
+author = {Kaczanowska, Sabina and Beury, Daniel W. and Gopalan, Vishaka and Tycko, Arielle K. and Qin, Haiying and Clements, Miranda E. and Drake, Justin and Nwanze, Chiadika and Murgai, Meera and Rae, Zachary and Ju, Wei and Alexander, Katherine A. and Kline, Jessica and Contreras, Cristina F. and Wessel, Kristin M. and Patel, Shil and Hannenhalli, Sridhar and Kelly, Michael C. and Kaplan, Rosandra N.},
+doi = {10.1016/j.cell.2021.02.048},
+file = {:Users/elanness-cohn/Library/Application Support/Mendeley Desktop/Downloaded/Kaczanowska et al. - 2021 - Genetically engineered myeloid cells rebalance the core immune suppression program in metastasis.pdf:pdf},
+issn = {00928674},
+journal = {Cell},
+keywords = {T cells,cancer immunology,genetically engineered myeloid cells,immune suppression,immunotherapy,interleukin 12,metastasis tumor microenvironment,pre-metastatic niche,stem cell niche},
+month = {apr},
+number = {8},
+pages = {2033--2052.e21},
+pmid = {33765443},
+publisher = {Elsevier BV},
+title = {{Genetically engineered myeloid cells rebalance the core immune suppression program in metastasis}},
+url = {https://doi.org/10.1016/j.cell.2021.02.048},
+volume = {184},
+year = {2021}
+}
+
+@article{Chiang2018,
+abstract = {During droughts, low surface moisture may translate surface heating into warming, since excess energy will be converted into sensible heat instead of evaporating as latent heat. Recent concurrent occurrences of droughts and heatwaves have caused compounding ecosystem and societal stresses, which prompted our investigation of whether there has been a shift in temperatures under meteorological drought conditions in the United States. Using historical observations, we detect that droughts have been warming faster than the average climate in the southern and northeastern United States. Climate model projections also show a pronounced warming shift in southern states between the late 20th and 21st centuries. We argue that concurrent changes in vapor pressure deficit and relative humidity influence the amplified warming, modifying interactions between the land surface and the atmosphere. We anticipate that the magnified shift in temperatures will bring more concurrent extremes in the future, exacerbating individual impacts from high temperatures and droughts.},
+author = {Chiang, Felicia and Mazdiyasni, Omid and AghaKouchak, Amir},
+doi = {10.1126/sciadv.aat2380},
+file = {:Users/elanness-cohn/Library/Application Support/Mendeley Desktop/Downloaded/Chiang, Mazdiyasni, AghaKouchak - 2018 - Amplified warming of droughts in southern United States in observations and model simulations.pdf:pdf},
+issn = {23752548},
+journal = {Science Advances},
+month = {aug},
+number = {8},
+pages = {eaat2380},
+pmid = {30083607},
+publisher = {American Association for the Advancement of Science},
+title = {{Amplified warming of droughts in southern United States in observations and model simulations}},
+url = {http://advances.sciencemag.org/},
+volume = {4},
+year = {2018}
+}
+
+@article{Hargreaves2020,
+abstract = {Background Vegetarianism is an increasingly common practice worldwide. Despite good evidence from other countries regarding vegetarians' diet quality, data from the Brazilian population is still scarce. Objective To characterize the vegetarian Brazilian population and evaluate their diet quality compared to the general Brazilian population. Methods We performed a nationwide cross-sectional study using an online self-administered questionnaire, previously validated for the Brazilian population, to evaluate diet quality markers of vegetarians. The invitation to participate in the survey was spread nationwide, aimed at vegetarian communities. Individuals who considered themselves vegetarians and were at least 18 years old were eligible to participate. The results on regular intake and intake adequacy were compared among vegetarians and between genders using the Pearson's chi-square test. The body mass index (BMI) were analyzed by the Analysis of Variance (ANOVA) followed by Tukey post-hoc test. The Kolmogorov-Smirnov test verified normality. All analyses considered bilateral hypotheses and a significance level of 5{\%} (p {\textless}0.05). Results Brazilian vegetarians presented better diet quality markers, such as higher regular weekly intake and adequate daily intake of fruits and vegetables, and lower regular intake of soft drinks when compared to the general Brazilian population. Vegetarians also presented a proportionally higher consumption of natural foods and lower consumption of processed foods. Among vegetarians, a higher proportion of vegans showed positive results regarding diet markers analysis, when compared to vegetarians, pesco-vegetarians, and semi-vegetarians. Conclusions Vegetarians showed better results of diet adequacy when compared to the general population in Brazil, and vegans fared better when compared with other vegetarians. Despite the good results found, a large proportion of the participants still did not achieve the fruits and vegetables daily intake, according to the World Health Organization recommendations.},
+author = {Hargreaves, Shila Minari and Ara{\'{u}}jo, Wilma Maria Coelho and Nakano, Eduardo Yoshio and Zandonadi, Renata Puppin},
+doi = {10.1371/journal.pone.0232954},
+editor = {Sichieri, Rosely},
+file = {:Users/elanness-cohn/Library/Application Support/Mendeley Desktop/Downloaded/Hargreaves et al. - 2020 - Brazilian vegetarians diet quality markers and comparison with the general population A nationwide cross-sect.pdf:pdf},
+issn = {19326203},
+journal = {PLoS ONE},
+keywords = {Brazil,Bread,Diet,Diet and type 2 diabetes,Food,Fruits,Meat,Obesity},
+month = {may},
+number = {5},
+pages = {e0232954},
+pmid = {32396556},
+publisher = {Public Library of Science},
+title = {{Brazilian vegetarians diet quality markers and comparison with the general population: A nationwide cross-sectional study}},
+url = {https://dx.plos.org/10.1371/journal.pone.0232954},
+volume = {15},
+year = {2020}
+}
+
+@article{Atasoy2017,
+abstract = {Recent studies have started to elucidate the effects of lysergic acid diethylamide (LSD) on the human brain but the underlying dynamics are not yet fully understood. Here we used 'connectome-harmonic decomposition', a novel method to investigate the dynamical changes in brain states. We found that LSD alters the energy and the power of individual harmonic brain states in a frequency-selective manner. Remarkably, this leads to an expansion of the repertoire of active brain states, suggestive of a general re-organization of brain dynamics given the non-random increase in co-activation across frequencies. Interestingly, the frequency distribution of the active repertoire of brain states under LSD closely follows power-laws indicating a re-organization of the dynamics at the edge of criticality. Beyond the present findings, these methods open up for a better understanding of the complex brain dynamics in health and disease.},
+author = {Atasoy, Selen and Roseman, Leor and Kaelen, Mendel and Kringelbach, Morten L. and Deco, Gustavo and Carhart-Harris, Robin L.},
+doi = {10.1038/s41598-017-17546-0},
+file = {:Users/elanness-cohn/Library/Application Support/Mendeley Desktop/Downloaded/Atasoy et al. - 2017 - Connectome-harmonic decomposition of human brain activity reveals dynamical repertoire re-organization under LSD.pdf:pdf},
+issn = {20452322},
+journal = {Scientific Reports},
+keywords = {Biomarkers,Consciousness,Dynamical systems,Neuroscience},
+month = {dec},
+number = {1},
+pages = {1--18},
+pmid = {29247209},
+publisher = {Nature Publishing Group},
+title = {{Connectome-harmonic decomposition of human brain activity reveals dynamical repertoire re-organization under LSD}},
+url = {www.nature.com/scientificreports/},
+volume = {7},
+year = {2017}
+}
+
+
 @Manual{R,
   title = {\proglang{R}: {A} Language and Environment for Statistical Computing},
   author = {{\proglang{R} Core Team}},
